在里面引入了Vue虚拟DOM的链接

--- a/source/_posts/2020-02-18淘宝面试总结.md
+++ b/source/_posts/2020-02-18淘宝面试总结.md
@@ -184,7 +184,7 @@ new Vue({
 
 ## 什么是 Vue 中的虚拟 DOM
 
-（专门写一篇博客说这个吧）
+<a href="https://www.wqh4u.cn/2020/02/18/%E7%9C%8B%E7%9C%8BVue%E4%B8%AD%E7%9A%84%E8%99%9A%E6%8B%9FDOM/">专门写了篇关于 VDOM 的博客</a>
 
 <hr />
 
